// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-1-base.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            This is a very very very very long menu title
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-1-link.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Google
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            strackoverflow
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            github
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-1-onClick.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Parent 1
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Parent 4
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 5
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 6
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Option 7
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-2-horizontal.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-4-disabled.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-5-selected.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-6-itemRender.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            <i />
             Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            <i />
             Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            <i />
             Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            <i />
             Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-7-click.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-8-dark.tsx] 1`] = `
<div>
  <div>
    <ul>
      <li>
        <a>
          <span>
            Navigation One
          </span>
          <span />
        </a>
      </li>
      <li>
        <a>
          <span>
            Navigation Two
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 1
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 2
              </span>
              <span />
            </a>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Three
          </span>
          <span />
        </a>
        <ul>
          <li>
            <a>
              <span>
                Option 3
              </span>
              <span />
            </a>
          </li>
          <li>
            <a>
              <span>
                Option 4
              </span>
              <span />
            </a>
            <ul>
              <li>
                <a>
                  <span>
                    Optic 1
                  </span>
                  <span />
                </a>
              </li>
              <li>
                <a>
                  <span>
                    Optic 2
                  </span>
                  <span />
                </a>
              </li>
            </ul>
          </li>
        </ul>
      </li>
      <li>
        <a>
          <span>
            Navigation Four
          </span>
          <span />
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Menu[snapshot] Snapshot test: Menu[site/pages/components/Menu/example-10-frontCaret.tsx] 1`] = `
<div>
  <div>
    <div>
      <ul>
        <li>
          <a>
            <div />
            <span>
              Navigation One
            </span>
          </a>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Two
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 1
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 2
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Three
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 3
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 4
                </span>
              </a>
              <ul>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 1
                    </span>
                  </a>
                </li>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 2
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Four
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div>
    <div>
      <ul>
        <li>
          <a>
            <div />
            <span>
              Navigation One
            </span>
          </a>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Two
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 1
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 2
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Three
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 3
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 4
                </span>
              </a>
              <ul>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 1
                    </span>
                  </a>
                </li>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 2
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Four
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
  <div>
    <div>
      <ul>
        <li>
          <a>
            <div />
            <span>
              Navigation One
            </span>
          </a>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Two
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 1
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 2
                </span>
              </a>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Three
            </span>
          </a>
          <ul>
            <li>
              <a>
                <div />
                <span>
                  Option 3
                </span>
              </a>
            </li>
            <li>
              <a>
                <div />
                <span>
                  Option 4
                </span>
              </a>
              <ul>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 1
                    </span>
                  </a>
                </li>
                <li>
                  <a>
                    <div />
                    <span>
                      Optic 2
                    </span>
                  </a>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li>
          <a>
            <div />
            <span>
              Navigation Four
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
